# steamroll

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
steamroll/: __init__.py  steamroll.py  utils.py
steamroll/xyz2mol_tmc/: xyz2mol_local.py  xyz2mol_tmc.py
tests/: __init__.py  test_steamroll.py  test_stub.py  test_xyz2mol_tmc.py
tests/data/: UCl6.xyz  bromobenzene_distorted.xyz  fe_pyridone_complex.xyz  naphthalene.xyz
